// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownRemark without date or dtaft 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`MarkdownRemark without frontmatter 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should be false if frontmatter draft is false 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "draft": false,
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should be false if frontmatter draft is false and date is past time 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "date": "2019-02-07",
            "draft": false,
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should be false in specific timezone 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "date": "2019-02-05",
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should be true if frontmatter date time is same or after build time 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "date": "2019-02-07",
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should be true if frontmatter draft is true 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "draft": true,
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should be true if frontmatter draft is true, even if frontmatter date is past 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "date": "2019-02-07",
            "draft": true,
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should be true in specific timezone 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "date": "2019-02-05T12:00",
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should false if publishDraft option is true 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "date": "2019-02-07",
            "draft": true,
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`draft should true if publishDraft option is false 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "draft",
        "node": Object {
          "frontmatter": Object {
            "date": "2019-02-07",
            "draft": true,
            "title": "post title",
          },
          "internal": Object {
            "type": "MarkdownRemark",
          },
        },
        "value": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
